Долго не доходило)

--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -15,7 +15,8 @@
     <div class="container">
         <ul class="menu">
             <li><a href="{% url 'index' %}">Home</a></li>
-            <li><a href="{% url 'shop_create' %}">Add Product</a></li>
+            <li><a href="{% url 'shop_create' %}">Add Shop</a></li>
+            <li><a href="{% url 'cart_view' %}">Cart</a></li>
             {% block menu %}{% endblock %}
         </ul>
     </div>
