--- a/source/webapp/templates/shop/view.html
+++ b/source/webapp/templates/shop/view.html
@@ -1,16 +1,33 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block title %}View{% endblock %}
-
 {% block menu %}
-    <li><a href="{% url 'shop_update' shop.pk %}">Update</a></li>
-    <li><a href="{% url 'shop_delete' shop.pk %}">Delete</a></li>
+    <li><a href="{% url 'shop_update' shop.pk %}">Редактировать</a></li>
+    <li><a href="{% url 'shop_delete' shop.pk %}">Удалить</a></li>
 {% endblock %}
-
 {% block content %}
-    <h1>Заголовок:</h1>
-    <h1>Название:  {{ shop.name }}</h1>
-    <p class="pre">Описание: {{ shop.description }}</p>
-    <p>Остаток: {{ shop.amount }} | Цена: {{ shop.price }}</p>
-    <p>Категория: {{ shop.get_category_display }}</p>
+    <div class="card text-center">
+        <div class="card-header">{{ shop.get_category_display }}</div>
+        <div class="card-body">
+            <h5 class="card-title">{{ shop.name }}</h5>
+            <p class="card-text">{{ shop.description }}</p>
+            <p class="card-text">{{ shop.price }}сом</p>
+            <a href="{% url 'shop_update' shop.pk %}" class="card-link">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                </svg>
+            </a>
+            <a href="{% url 'shop_delete' shop.pk %}" class="card-link">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-minus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 1H4a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h5v-1H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h5v2.5A1.5 1.5 0 0 0 10.5 6H13v2h1V6L9 1z"/>
+                    <path fill-rule="evenodd" d="M11 11.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5z"/>
+                </svg>
+            </a>
+        </div>
+        <div class="card-footer text-muted"><p>Оставшееся количество: {{ shop.amount }}шт</p>
+            <hr/>
+            {% url 'cart_add' shop.pk as action_url %}
+            {% include 'partial/form.html' with button_text='Добавить в корзину' action_url=action_url form_method='post'%}
+        </div>
+    </div>
 {% endblock %}
